Altera o arquivo lista-de-tarefas.component.html
O arquivo lista-de-tarefas.component.html recebeu alterações. Sobre essas alterações, pode-se destacar:

- A adição de uma lista que conterá todas as tarefas que foram salvas no banco de dados.
- A adição de um parágrafo que informa a quantidade de tarefas contidas na lista de tarefas.
- A adição de botões que permitem que o usuário realize algumas ações sobre determinada tarefa.
- A adição de uma regra relacionada com a exibição do botão Marcar como concluída, do botão Editar e do botão Marcar como não concluída.
- A indicação de quando deverá ser chamado o método relacionado com a atualização de uma tarefa.

--- a/src/app/pages/lista-de-tarefas/lista-de-tarefas.component.html
+++ b/src/app/pages/lista-de-tarefas/lista-de-tarefas.component.html
@@ -1,1 +1,18 @@
-<p>lista-de-tarefas works!</p>
+<p id="qtd-tarefas">Quantidade de tarefas na lista: {{numeroDeTarefas}}</p>
+<div id="container-botao-adicionar">
+    <a [routerLink]="['/adicionar-tarefa']" class="botao" id="adicionar">Adicionar tarefa</a>
+</div>
+<ul *ngFor="let tarefa of listaDeTarefas">
+    <li [class.riscada]="tarefa.concluida">
+        <span>{{tarefa.descricao}}</span>
+        <div id="container-botoes-tarefa">
+            @if (!tarefa.concluida) {
+                <button (click)="atualizarPropriedadeConcluida(tarefa)" class="botao" id="marcar-como-concluida">Marcar como concluída</button>
+                <a [routerLink]="['/editar', tarefa.id]" class="botao" id="editar">Editar</a>
+            } @else {
+                <button (click)="atualizarPropriedadeConcluida(tarefa)" class="botao" id="marcar-como-nao-concluida">Marcar como não concluída</button>
+            }
+            <a [routerLink]="['/excluir', tarefa.id]" class="botao" id="excluir">Excluir</a>
+        </div>
+    </li>
+</ul>
