Altera o arquivo adicionar-tarefa.component.html
O arquivo adicionar-tarefa.component.html recebeu alterações. Sobre essas alterações, pode-se destacar:

- A adição de um formulário composto por um campo input e pelo botão Confirmar.
- A indicação de quando deverá ser chamado o método relacionado com a adição de uma tarefa.
- A adição de validação para o campo input.
- A indicação de quando a mensagem de alerta deverá ficar oculta.
- A indicação de quando o botão Confirmar deverá ser desabilitado.

--- a/src/app/pages/adicionar-tarefa/adicionar-tarefa.component.html
+++ b/src/app/pages/adicionar-tarefa/adicionar-tarefa.component.html
@@ -1,1 +1,11 @@
-<p>adicionar-tarefa works!</p>
+<h2>Adicionar tarefa</h2>
+<form (ngSubmit)="adicionarTarefa()" #formularioAdicionar="ngForm">
+    <div id="container-input">
+        <label for="descricao">Descrição da tarefa:</label>
+        <input id="descricao" name="campoDescricao" required type="text" [(ngModel)]="tarefa.descricao" #campoDescricao="ngModel" minlength="3" maxlength="25">
+    </div>
+    <p class="alerta" [hidden]="campoDescricao.valid || campoDescricao.pristine">A descrição da tarefa não pode conter menos de 3 caracteres!</p>
+    <div id="container-botao">
+        <button [disabled]="!campoDescricao.valid || campoDescricao.pristine" class="botao confirmar" type="submit">Confirmar</button>
+    </div>
+</form>
