Altera o arquivo excluir-tarefa.component.html
O arquivo excluir-tarefa.component.html recebeu alterações. Sobre essas alterações, pode-se destacar:

- A adição de uma mensagem e do botão Confirmar.
- A indicação de quando deverá ser chamado o método relacionado com a exclusão de uma tarefa.

--- a/src/app/pages/excluir-tarefa/excluir-tarefa.component.html
+++ b/src/app/pages/excluir-tarefa/excluir-tarefa.component.html
@@ -1,1 +1,5 @@
-<p>excluir-tarefa works!</p>
+<h2>Excluir tarefa</h2>
+<p>Clique em Confirmar para excluir a tarefa <strong>{{tarefa.descricao}}</strong></p>
+<div id="container-botao">
+    <button (click)="excluirTarefa()" class="botao confirmar">Confirmar</button>
+</div>
